--- a/.env_prod.txt
+++ b/.env_prod.txt
@@ -1,8 +1,8 @@
-APP_NAME="ITQ EAD"
+APP_NAME="ENAQ"
 APP_ENV=local
 APP_KEY=base64:caIrMXyL2huxc3mYgVfdlGuP7wpVa/uVJD9/Weyl7jM=
 APP_DEBUG=false
-APP_URL=https://itq.seecpa.app/public
+APP_URL=https://enaq.seecpa.app/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -34,7 +34,7 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="ead@seecpa.com.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
